--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <h1>Heading One</h1>
         <h2>HEading Two</h2>
-        <p>This is a HTML playground to understand HTML better
+        <p>This is a HTML playground to understand <strong>HTML</strong> better
         </p>
     </body>
 </html>
