--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <h1>Heading One</h1>
         <h2>HEading Two</h2>
         <p>This is a HTML playground to understand <strong>HTML</strong> better. <br> You seem to be getting it <em>so far!</em>
+        <br>If you need more help use <a href="https://www.youtube.com/watch?v=UB1O30fR-EE">this</a>
         </p>
     </body>
 </html>
