--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
         <h1>Heading One</h1>
         <h2>HEading Two</h2>
         <p>This is a HTML playground to understand <strong>HTML</strong> better. <br> You seem to be getting it <em>so far!</em>
-        <br>If you need more help use <a href="https://www.youtube.com/watch?v=UB1O30fR-EE">this</a>
+        <br>If you need more help use <strong><a href="https://www.youtube.com/watch?v=UB1O30fR-EE" target="_blank">this</a></strong>
         </p>
+      <ul>
+        <li>List Item 1</li>
+        <li>List Item 2</li>
+      </ul>
+      <ol>
+         <li>List Item 3</li>
+         <li>List Item 4</li>
+      </ol>
+
+      
     </body>
 </html>
