thead and tbody

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
          <li>List Item 4</li>
       </ol>
 
-      
+      <table>
+        <thead>
+           <th>Name</th>
+           <th>Email</th>
+           <th>Age</th>
+        </thead>
+        <tbody>
+
+        </tbody>
+      </table>
     </body>
 </html>
