--- a/index.html
+++ b/index.html
@@ -20,15 +20,34 @@
 
       <table>
         <thead>
+          <tr>
            <th>Name</th>
            <th>Email</th>
            <th>Age</th>
+          </tr>
         </thead>
         <tbody>
+          <tr>
             <td>Asifur</td>
             <td>asif@gmail.com</td>
             <td>30</td>
+          </tr>
+          <tr>
+            <td>Bob</td>
+            <td>bob@gmail.com</td>
+            <td>20</td>
+          </tr>
+          <tr>
+            <td>Adam</td>
+            <td>adam@yahoo.com</td>
+            <td>27</td>
+          </tr>
         </tbody>
       </table>
+      
+      <br>
+      <hr>
+      <br>
+
     </body>
 </html>
