--- a/index.html
+++ b/index.html
@@ -49,5 +49,16 @@
       <hr>
       <br>
 
+      <form>
+        <div>
+          <label>First Name</label>
+          <input type="text" name="firstName">
+        </div>
+        <div>
+            <label>Last Name</label>
+            <input type="text" name="lastName">
+          </div>
+      </form>
+
     </body>
 </html>
