--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
             <label>Email</label>
             <input type="text" name="email">
           </div>
+          <br>
+            <label>Message</label>
+            <textarea name="message"></textarea>
       </form>
 
     </body>
