--- a/index.html
+++ b/index.html
@@ -65,8 +65,19 @@
             <input type="text" name="email">
           </div>
           <br>
+            <div>
             <label>Message</label>
             <textarea name="message"></textarea>
+            </div>
+          <br>
+            <div>
+            <label>Gender</label>
+            <select name="gender">
+            <option value="male">Male</option>
+            <option value="female">Female</option>
+            <option value="other">Other</option>
+            </select>
+            </div>
       </form>
 
     </body>
