--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
             <option value="other">Other</option>
             </select>
             </div>
+          <br>
+            <div>
+            <label>Age</label>
+            <input type="number" name="age">
+            </div>
       </form>
 
     </body>
