--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
             <label>Age</label>
             <input type="number" name="age">
             </div>
+          <br>
+            <div>
+            <label>Birthday</label>
+            <input type="date" name="birthday">
+            </div>
       </form>
 
     </body>
