--- a/index.html
+++ b/index.html
@@ -49,25 +49,25 @@
       <hr>
       <br>
 
-      <form>
+      <form action="process.php" method="POST">
         <div>
           <label>First Name</label>
-          <input type="text" name="firstName">
+          <input type="text" name="firstName" placeholder="Enter First Name">
         </div>
         <br>
         <div>
             <label>Last Name</label>
-            <input type="text" name="lastName">
+            <input type="text" name="lastName" placeholder="Enter Last Name">
           </div>
           <br>
           <div>
             <label>Email</label>
-            <input type="text" name="email">
+            <input type="text" name="email" placeholder="Enter Email">
           </div>
           <br>
             <div>
             <label>Message</label>
-            <textarea name="message"></textarea>
+            <textarea name="message" placeholder="Enter Message"></textarea>
             </div>
           <br>
             <div>
@@ -81,12 +81,12 @@
           <br>
             <div>
             <label>Age</label>
-            <input type="number" name="age">
+            <input type="number" name="age" placeholder="Type In Age or Choose From The List">
             </div>
           <br>
             <div>
             <label>Birthday</label>
-            <input type="date" name="birthday">
+            <input type="date" name="birthday" placeholder="Birthday">
             </div>
       </form>
 
