--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
             <label>Birthday</label>
             <input type="date" name="birthday" placeholder="Birthday">
             </div>
+          <br>
+            <div>
+            <input type="submit" name="submit" Value="Submit">
+            </div>
       </form>
 
     </body>
